import carteAnimal.*;
import gameplay.jeu.*;
import typeCarte.*;

public class Main
{
    public static void main(String[] args) {
        Partie partie = new Partie();

        partie.demarrerPartieSansObstacle();
    }
}
