package carteAnimal;

import typeCarte.Animal;

public class Chat extends Animal{
    public Chat(){
        super("Chat", 0, 1, 1, 0, false);
    }
}
