package carteAnimal;

import typeCarte.Animal;

public class Loup extends Animal {
    public Loup(){
        super("Loup", 3, 2, 2, 0, false);
    }
}
